--- a/admin/war/src/main/webapp/templates/admin/screen/main.vm
+++ b/admin/war/src/main/webapp/templates/admin/screen/main.vm
@@ -5,7 +5,7 @@
     <!-- 顶部-->
     <div class="layui-header header header-menu ">
         <div class="layui-main ">
-            <a href="#" class="logo">情咖短信管理系统</a>
+            <a href="#" class="logo">内容管理系统</a>
             <!-- 左侧导航收缩开关 -->
             <div class="side-menu-switch" id="toggle"><span class="switch" ara-hidden="true"></span></div>
             <!-- 顶级菜单 -->
