--- a/admin/war/src/main/webapp/templates/admin/layout/default.vm
+++ b/admin/war/src/main/webapp/templates/admin/layout/default.vm
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <title>消息后台管理系统</title>
+    <title>内容管理系统</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="消息后台管理系统"/>
+    <meta name="keywords" content="内容管理系统"/>
     <meta name="description" content="致力于提供通用版本后台管理解决方案"/>
     <link rel="shortcut icon" href="/static/img/favicon.ico" />
 
